@@ -36,13 +36,17 @@ struct dxJointHinge2 : public dxJoint
     dVector3 axis2;     // axis 2 w.r.t second body
     dReal c0, s0;       // cos,sin of desired angle between axis 1,2
     dVector3 v1, v2;    // angle ref vectors embedded in first body
+    dVector3 w1, w2;    // angle ref vectors embedded in second body
     dxJointLimitMotor limot1; // limit+motor info for axis 1
     dxJointLimitMotor limot2; // limit+motor info for axis 2
     dReal susp_erp, susp_cfm; // suspension parameters (erp,cfm)
 
 
-    dReal measureAngle() const;
+    dReal measureAngle1() const;
+    dReal measureAngle2() const;
     void makeV1andV2();
+    void makeW1andW2();
+
     void getAxisInfo(dVector3 ax1, dVector3 ax2, dVector3 axis,
         dReal &sin_angle, dReal &cos_Angle) const;
 
